ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sunsu.193.122.173.134.nip.io
    http:
      paths:
      - backend:
          service:
            name: hello-cluster-service
            port:
              number: 80
        pathType: Prefix
        path: /
